--- a/about-me.html
+++ b/about-me.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1>About Me</h1>
+    <h1>About</h1>
     <p>I am a 2 years experience front end developer.
         Specialized in HTML, CSS, JS and React, I have always tried to finish my tasks as soon as I can while retaining
         high quality.</p>
