--- a/about-me.html
+++ b/about-me.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>About</h1>
-    <p>I am a 2 years experience front end developer.
+    <p>I a 2 years experience front end developer.
         Specialized in HTML, CSS, JS and React, I have always tried to finish my tasks as soon as I can while retaining
         high quality.</p>
     <ul>
