add index, contact, about me page

--- a/about-me.html
+++ b/about-me.html
@@ -9,15 +9,57 @@
 </head>
 
 <body>
-    <h1>About</h1>
-    <p>I a 2 years experience front end developer.
+    <a href="index.html"><img src="img/portfolio.svg"> My Porfolio</a>
+    <h1>About Me</h1>
+    <p>I am a 2 years experience front end developer.<br>
         Specialized in HTML, CSS, JS and React, I have always tried to finish my tasks as soon as I can while retaining
         high quality.</p>
+    <table>
+        <tr>
+            <th>SKILL</th>
+            <th>COMPETENCY</th>
+        </tr>
+        <tr>
+            <td>HTML</td>
+            <td>90%</td>
+        </tr>
+        <tr>
+            <td>CSS</td>
+            <td>100%</td>
+        </tr>
+        <tr>
+            <td>JS</td>
+            <td>85%</td>
+        </tr>
+        <tr>
+            <td>REACT</td>
+            <td>75%</td>
+        </tr>
+    </table>
+    <audio controls>
+        <source src="media/golden_girls.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
+    <audio controls>
+        <source src="media/welcome_to_my_house.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
+    <video controls>
+        <source src="media/html.mp4" type="video/mp4">
+        Your browser does not support HTML video.
+    </video>
+    <video controls>
+        <source src="media/css.mp4" type="video/mp4">
+        Your browser does not support HTML video.
+    </video>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/0WI-axJqrdw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/aGirtEQVeik" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <ul>
         <li>Fitness</li>
         <li>Read</li>
         <li>Travel</li>
     </ul>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3919.5553098766122!2d106.69889771358017!3d10.768714492326783!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31752f7dbce91fbd%3A0x3954d44420742ac3!2sNordic%20Coder!5e0!3m2!1sen!2s!4v1641393063508!5m2!1sen!2s" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 </body>
 
 </html>
