--- a/index.html
+++ b/index.html
@@ -1,13 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .top-menu {
+            background-color: black;
+        }
+
+        .top-menu a {
+            color: white;
+        }
+
+        h1 {
+            font-size: 64px;
+        }
+
+        .grey {
+            color: #828282;
+        }
+    </style>
 </head>
+
 <body>
-    <h1>My Porfolio</h1>
-    <p>My main focuses are HTML, CSS, JS, React</p>
+    <nav class="top-menu">
+        <a href="contact.html">Contact</a>
+        <a href="https://www.facebook.com/" target="_blank"><img src="img/facebook.svg" alt="facebook"></a>
+        <a href="#"><img src="img/linkedin.svg" alt="linkedin"></a>
+    </nav>
+    <img src="img/profile-img.png" alt="Profile Image">
+    <p><b>My Name</b></p>
+    <a href="mailto:myemail@gmail.com">myemail@gmail.com</a>
+    <a href="index.html"><img src="img/portfolio.svg"> My Porfolio</a>
+    <header>
+        <h1>My <span style="color: #EB5757;">Porfolio</span></h1>
+        <p>My main focuses are <b>HTML, CSS, JS, React</b></p>
+        <form>
+            <input type="search" name="search" placeholder="Search">
+            <input type="image" src="img/search.svg" alt="Search">
+        </form>
+    </header>
+    <main>
+        <a href="#technology">#technology</a>
+        <section>
+            <h3>#ecommerce</h3>
+            <article>
+                <img src="img/project-image.png" alt="Nordic Coder">
+                <p>Nordic Coder</p>
+                <p class="grey"><i>HTML, CSS, JS, React</i></p>
+            </article>
+            <article>
+                <img src="img/raidius.png" alt="Raidius">
+                <p>Raidus</p>
+                <p class="grey"><i>HTML, CSS, JS, React</i></p>
+            </article>
+            <img src="img/project-image.png" alt="Nordic Coder">
+            <img src="img/project-image.png" alt="Nordic Coder">
+        </section>
+        <section>
+            <h3 id="technology">#technology</h3>
+            <img src="img/project-image.png" alt="Nordic Coder">
+            <img src="img/project-image.png" alt="Nordic Coder">
+            <img src="img/project-image.png" alt="Nordic Coder">
+            <img src="img/project-image.png" alt="Nordic Coder">
+            <img src="img/project-image.png" alt="Nordic Coder">
+            <img src="img/project-image.png" alt="Nordic Coder">
+            <img src="img/project-image.png" alt="Nordic Coder">
+            <img src="img/project-image.png" alt="Nordic Coder">
+            <img src="img/project-image.png" alt="Nordic Coder">
+        </section>
+        <h3>#entertainment</h3>
+        <img src="img/project-image.png" alt="Nordic Coder">
+        <img src="img/project-image.png" alt="Nordic Coder">
+        <img src="img/project-image.png" alt="Nordic Coder">
+    </main>
+    <footer>
+        <p>Copyright &copy; 2020 Your Name. All rights reserved.</p>
+    </footer>
 </body>
+
 </html>
